--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "react-emotion": "^9.2.12",
+    "react-error-boundary": "^2.3.0",
     "react-places-autocomplete": "^7.2.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.0.1",
